<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextTextPassword7"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextTextPassword8"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/confirme_sua_senha"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical"
            android:gravity="center|center_horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="158dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="signUp"
                android:text="@string/cadastrar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:gravity="center|center_horizontal|center_vertical" >

            <LinearLayout
                android:layout_width="236dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="48dp"
                    android:onClick="loadTermsUse"
                    android:text="@string/termos_de_uso" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>